--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -12,22 +12,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Install md-to-pdf
+        run: |-
+          npm install -g md-to-pdf
       
       - name: Build using md-to-pdf
         run: |-
-          npm install -g md-to-pdf
-          mkdir -p _output
           echo; echo "Input Files Listing:"
           find . \( -wholename "./index.md" -or -wholename "./pages/*.md" \)
           echo; echo "Generating PDF..."
-          find . \( -wholename "./index.md" -or -wholename "./pages/*.md" \) -exec cat {} \; | md-to-pdf > _output/linux-cheatsheet.pdf
-          echo; echo "Output Files Listing:"
-          ls _output
-          cd ..
+          find . \( -wholename "./index.md" -or -wholename "./pages/*.md" \) -exec cat {} \; | md-to-pdf > linux-cheatsheet.pdf
       
       - name: Upload artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
-          name: "Generated PDF"
-          path: _output
+          name: linux-cheatsheet.pdf
+          path: linux-cheatsheet.pdf
