--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -2,8 +2,11 @@ name: Docs to PDF
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
+    tags:
+    - 'v*'
+  pull_request:
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
@@ -23,7 +26,15 @@ jobs:
           cat index_pdf.md pages/*.md | md-to-pdf > linux-cheatsheet.pdf
 
       - name: Upload artifact
+        if: "!startsWith(github.ref, 'refs/tags/v')"
         uses: actions/upload-artifact@v4
         with:
           name: linux-cheatsheet.pdf
           path: linux-cheatsheet.pdf
+          
+      - name: Attach to release
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            linux-cheatsheet.pdf
